[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/Menu/MenuPause.gd" type="Script" id=1]

[node name="MenuPause" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.556863 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 243.0
margin_top = 113.0
margin_right = 396.0
margin_bottom = 247.0
custom_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 153.0
margin_bottom = 44.0
custom_constants/margin_bottom = 30

[node name="PauseLabel" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer"]
margin_right = 153.0
margin_bottom = 14.0
text = "GAME_PAUSED_LABEL"
align = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 153.0
margin_bottom = 74.0
text = "RESUME_BUTTON"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 153.0
margin_bottom = 104.0
text = "MAIN_MENU_BUTTON"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 153.0
margin_bottom = 134.0
text = "QUIT_BUTTON"
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
